--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "aduane-sports-solutions-equipas",
-  "homepage": "https://AlexandreMSLuis.github.com/AlexandreMSLuis/aduane-equipas/",
+  "homepage": "https://alexandremsluis.github.io/aduane-equipas/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "gh-pages": "^6.3.0",
